--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Welcome to my page</h1>
     <p>This is a paragraph of text.</p>
-    <img src="image.jpg" alt="An image">
+    <img src="https://imgs.search.brave.com/0Fi3GWl03VZaCIMgg99AA57wPypncL9AAYuFwTug-1s/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly9wcmV2/aWV3LnJlZGQuaXQv/bXktaWRpb3RzLTMt/djAtbWlxYzc1dXl5/dTdlMS5qcGc_d2lk/dGg9NjQwJmNyb3A9/c21hcnQmYXV0bz13/ZWJwJnM9NWRmMWU2/MjljNGUwMGYxYzA0/MDI4NmY1YWRjOWJj/ODNhMWRmNjIxOQ" alt="An image">
     <ul>
       <li>Item 1</li>
       <li>Item 2</li>
