--- a/index.html
+++ b/index.html
@@ -141,13 +141,9 @@
   <div class="header">
     <div class="menu">
       <a href="#">Home</a>
-      <a href="#">Main Discord</a>
+      <a href="#">Discord</a>
       <a href="#">Store</a>
       <a href="#">DarkRP</a>
-      <a href="#">StarWarsRP</a>
-      <a href="#">MilitaryRP</a>
-      <a href="#">Staff</a>
-      <a href="#">Support</a>
     </div>
   </div>
 
@@ -170,16 +166,6 @@
           <td>105 / 128</td>
         </tr>
         <tr>
-          <td>StarWarsRP</td>
-          <td>193.243.190.38:27015</td>
-          <td class="status online"><div class="circle"></div> Online</td>
-          <td>9 / 128</td>
-        </tr>
-        <tr>
-          <td>MilitaryRP</td>
-          <td>193.243.190.34:27015</td>
-          <td class="status online"><div class="circle"></div> Online</td>
-          <td>12 / 128</td>
         </tr>
       </tbody>
     </table>
