--- a/index.html
+++ b/index.html
@@ -3,17 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Login & Sign Up</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="login-container">
+    <div class="form-container" id="loginForm">
         <h2>Login</h2>
-        <input type="text" id="username" placeholder="Username" required>
-        <input type="password" id="password" placeholder="Password" required>
+        <input type="text" id="loginUsername" placeholder="Username" required>
+        <input type="password" id="loginPassword" placeholder="Password" required>
         <button onclick="login()">Login</button>
-        <p id="message" style="color: red; display: none;">Invalid login details</p>
+        <p id="loginMessage" class="error-message" style="display: none;">Invalid login details</p>
+        <p>Don't have an account? <a href="#" onclick="showSignUp()">Sign Up</a></p>
     </div>
+
+    <div class="form-container" id="signUpForm" style="display: none;">
+        <h2>Sign Up</h2>
+        <input type="text" id="signUpUsername" placeholder="Username" required>
+        <input type="password" id="signUpPassword" placeholder="Password" required>
+        <button onclick="signUp()">Sign Up</button>
+        <p id="signUpMessage" class="error-message" style="display: none;">Username already exists</p>
+        <p>Already have an account? <a href="#" onclick="showLogin()">Login</a></p>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
